@@ -1,6 +1,12 @@
 # ChangeLog for x11-drivers/nvidia-drivers
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/nvidia-drivers/ChangeLog,v 1.243 2010/07/30 22:14:19 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/nvidia-drivers/ChangeLog,v 1.244 2010/08/04 11:37:15 spock Exp $
+
+*nvidia-drivers-256.44 (04 Aug 2010)
+
+  04 Aug 2010; Michał Januszewski <spock@gentoo.org>
+  +nvidia-drivers-256.44.ebuild:
+  Version bump.
 
   30 Jul 2010; Tomáš Chvátal <scarabeus@gentoo.org>
   nvidia-drivers-71.86.11.ebuild, nvidia-drivers-96.43.14.ebuild,
